--- a/static/index.html
+++ b/static/index.html
@@ -3,10 +3,11 @@
   <style>
     body{
       margin: 0;
+      margin-top: 20px;
     }
   </style>
 </head>
 <body>
-  <div id="root"></div>
+  <div id="root1"></div>
   <script type="text/javascript" src="bundle.js"></script>
 </body>
